src/main/java/com/fiap/skillriseapi/specs/error/ApiResponseUnauthorized.java
package com.fiap.skillriseapi.specs.error;

import io.swagger.v3.oas.annotations.media.Content;
import io.swagger.v3.oas.annotations.media.ExampleObject;
import io.swagger.v3.oas.annotations.responses.ApiResponse;
import org.springframework.http.MediaType;

import java.lang.annotation.ElementType;
import java.lang.annotation.Retention;
import java.lang.annotation.RetentionPolicy;
import java.lang.annotation.Target;

@Retention(RetentionPolicy.RUNTIME)
@Target({ElementType.TYPE, ElementType.METHOD, ElementType.PARAMETER, ElementType.ANNOTATION_TYPE})
@ApiResponse(
        responseCode = "401",
        description = "Não autorizado - credenciais inválidas ou token JWT ausente/inválido",
        content = @Content(
                mediaType = MediaType.APPLICATION_JSON_VALUE,
                examples = @ExampleObject(
                        summary = "Invalid credentials",
                        value = "{ \"error\": \"BAD_CREDENTIALS\", \"details\": {} }"
                )
        )
)
public @interface ApiResponseUnauthorized {
}
